# gbc-emulator-2

./: .gitignore  CMakeLists.txt  Constants.hh  LICENSE  Makefile  Opcode.hh  Processor.hh  README.md  TODO.md  emulator  main.cc
lib/imgui/: imgui.h
src/: CMakeLists.txt  Constants.hh  Instruction.hh  InstructionDecoder.cc  InstructionDecoder.hh  Memory.cc  Memory.hh  Metadata.cc  Metadata.hh  Opcode.hh  Processor.cc  Processor.hh  ProcessorUtil.cc  Register16bit.cc  Register16bit.hh  Register8bit.cc  Register8bit.hh  RegisterGet.cc  RegisterSet.cc  TerminalInputHandler.cc  TerminalInputHandler.hh  Timings.hh  Utility.cc  Utility.hh  Window.cc  Window.hh  main.cc  opcode_length.cc  opcode_names.hh  opcodes.cc  opcodes_cb.cc
src/frontend/: Renderer.cc  Renderer.hh  gui.cc
tests/: TestAddition.cc  TestAddition.hh  TestCPUFunctions.cc  TestCPUFunctions.hh  TestRegister16bit.cc  TestRegister16bit.hh  TestRegister8bit.cc  TestRegister8bit.hh  TestUtils.cc  TestUtils.hh  test_main.cc
tools/: generate_case.py  generate_function_map.py  generate_instruction.py  generate_opcode_functions.py  opcode_cb_map.txt  opcode_map.txt
